--- a/src/css/style-login.css
+++ b/src/css/style-login.css
@@ -41,7 +41,8 @@ label{
     box-shadow: 1px 2px 8px rgba(0,0,0,0.65);
 }
 .box-login{
-    padding-left: 378px;
+    display: flex;
+    justify-content: center;
 }
 #card-title{
     font-family: "Raleway Thin",sans-serif;
@@ -152,6 +153,10 @@ label{
     width: 440px;
     height: 35px;
     border-radius: 15px;
+}
+
+.form-login-username{
+    padding: 0px !important;
 }
 label{
     padding: 10px;
