--- a/src/css/style-mapel.css
+++ b/src/css/style-mapel.css
@@ -1,6 +1,7 @@
 *{
     margin: 0 auto !important;
     padding: 0 auto !important;
+    font-family: 'Quicksand', sans-serif;
 }
 .background{
     background-image: url("../img/bg2.png");
@@ -50,7 +51,6 @@
     font-size: 25px;
     color : #fff;
     text-decoration: none;
-    font-family: Poppins, sans-serif;
 }
 .button-aktif{
     padding: 20px 40px;
@@ -58,7 +58,6 @@
     font-size: 20px;
     color : rgb(63, 46, 46);
     text-decoration: none;
-    font-family: Poppins, sans-serif;
     float: right;
     margin-top: 20%;
 }
@@ -69,14 +68,12 @@
     background-color:coral;
 }  
 .ungu{
-    font-family: Poppins, sans-serif;
     background-color:#220FF4;
     opacity: 41%;;
     border-bottom: 5px solid indianred;
     text-shadow: 0px -2px indianred;
 }
 .hijau{
-    font-family: Poppins, sans-serif;
     background-color:#FFEA79 ;
     opacity: 80%;
     box-sizing: border-box;
@@ -88,13 +85,11 @@
     border-bottom: 1px solid;
 }  
 .judul{
-    font-family: Poppins, sans-serif;
     text-align: center;
     font-size: 30px;
     color: rgb(63, 46, 46);
 }
 .about{
-    font-family: Poppins, sans-serif;
     text-align: center;
     font-size: 35px;
     color: black;
@@ -128,21 +123,18 @@
     padding: 28px;
     color: bl;
     font-size: 20px;
-    font-family: Poppins, sans-serif;
 }
 .p2{
     text-align: center;
     padding: 28px;
     color: #fff;
     font-size: 20px;
-    font-family: Poppins, sans-serif;
 }
 .p3{
     text-align: center;
     padding: 9px;
     color: black;
     font-size: 19px;
-    font-family: Poppins, sans-serif;
 }
 .row{
     margin-top: 15%;
@@ -182,7 +174,6 @@
     text-align: center;
     padding-top: 20px;
     padding: inherit;
-    font-family: Poppins, sans-serif;
 }
 .jadwal-col{
     flex-basis: 31%;
@@ -199,7 +190,6 @@
 .sejajar{
     display: flex;
     justify-content:space-between;
-    font-family: Poppins, sans-serif;
     font-size: 30px;
     text-align: center;
     padding-top: 5%;
