--- a/src/css/style-ujian.css
+++ b/src/css/style-ujian.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 .header-materi {
   position: fixed;
@@ -23,8 +23,6 @@
   padding: 50px;
   text-align: center;
   font-size: 24px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", "Geneva", Verdana, sans-serif;
 }
 .right-area {
   padding-top: 2rem;
@@ -177,14 +175,10 @@ label #sidebar-btn:hover {
 .colom1 h1 {
   padding-top: 5px;
   color: white;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", "Geneva", Verdana, sans-serif;
 }
 .colom2 h1 {
   padding-top: 12px;
   color: white;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", "Geneva", Verdana, sans-serif;
 }
 .tanggal {
   font-size: 19px;
@@ -225,10 +219,6 @@ label #sidebar-btn:hover {
   font-size: 19px;
   padding-left: 27rem;
 }
-.status1 a {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", "Geneva", Verdana, sans-serif;
-}
 .kerjakan {
   color: black;
   background-color: rgb(180, 181, 255);
@@ -236,7 +226,6 @@ label #sidebar-btn:hover {
   border: none;
   box-shadow: 0px 1px 8px #2c2c54;
   cursor: pointer;
-  font-family: "Raleway SemiBold", sans-serif;
   height: 50px;
   transition: 0.25px;
   width: 140px;
@@ -249,7 +238,6 @@ label #sidebar-btn:hover {
   border: none;
   box-shadow: 0px 1px 8px #2c2c54;
   cursor: pointer;
-  font-family: "Raleway SemiBold", sans-serif;
   height: 50px;
   transition: 0.25px;
   width: 140px;
