--- a/src/css/style-wexam.css
+++ b/src/css/style-wexam.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +12,7 @@ text-transform: uppercase;
 }
 .judul-wex h1{
     font-size: 2rem;
-    padding: 50px;
+    padding: 20px;
 }
 .wexam-container{
     display: flex;
@@ -39,6 +38,15 @@ text-transform: uppercase;
     border-radius: 0.5rem;
     color: var(--main-color);
     text-align: justify;
+}
+.wexam-container .box .bxs-book-reader{
+    color:#3447d4 ;
+}
+.wexam-container .box .bx-library{
+    color:#3447d4 ;
+}
+.wexam-container .box .bxs-pencil{
+    color:#3447d4 ;
 }
 .wexam-container .box h2{
     font-size: 20px;
