--- a/src/css/yi.css
+++ b/src/css/yi.css
@@ -1,11 +1,11 @@
 body {
-  font-family: "Poppins";
   margin-left: 70px;
   margin-top: 150px;
-  background: rgb (230, 230, 230);
+  background-color: rgb(230, 230, 230);
+  font-family: "Quicksand", sans-serif;
 }
 .time {
-  background: rgb (12, 12, 12);
+  background: rgb(12, 12, 12);
   color: #000(253, 230, 230);
   border: 7px solid rgb(255, 252, 252);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
