--- a/src/css/style-mapel.css
+++ b/src/css/style-mapel.css
@@ -3,14 +3,7 @@
     padding: 0 auto !important;
     font-family: 'Quicksand', sans-serif;
 }
-.background{
-    background-image: url("../img/bg2.png");
-    background-size: auto;
-    position: relative;
-    background-repeat: repeat;
-    background-position: center;
-}
-.layer{
+.layer-mapel{
     position: relative;
     box-sizing: border-box;
     border-radius: 40px;
@@ -19,32 +12,32 @@
     height: 85%;
     background-color: rgba(0, 0, 0, 0.19);
 }
-.div-row{
+.div-row-mapel{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.dua-col{
+.dua-col-mapel{
     padding:10px 10px;
     transition: 0.5s;
 }
-.dua-col:hover{
+.dua-col-mapel:hover{
     padding-top: 10px;
     box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.19);
 }
-.button{
+.button-mapel{
     padding: 100px;
     padding-left: 0;
 }
-.tombol{
+.tombol-mapel{
     padding: 15px;
     padding-left: 0;
 }
-.animasi{
+.animasi-mapel{
     transition: all 0.1s;
     -webkit-transition: all 0.1s;
 }
-.tombol-aktif{
+.tombol-aktif-mapel{
     padding: 20px 80px;
     border-radius: 10px;
     font-family: rubik;
@@ -52,7 +45,7 @@
     color : #fff;
     text-decoration: none;
 }
-.button-aktif{
+.button-aktif-mapel{
     padding: 20px 40px;
     border-radius: 5px;
     font-size: 20px;
@@ -61,42 +54,42 @@
     float: right;
     margin-top: 20%;
 }
-.button-aktif:active{
+.button-aktif-mapel:active{
     transform: translate(100px,50px);
     -webkit-transform: translate(0px,5px);
     border-bottom: 1px solid;
     background-color:coral;
 }  
-.ungu{
+.ungu-mapel{
     background-color:#220FF4;
     opacity: 41%;;
     border-bottom: 5px solid indianred;
     text-shadow: 0px -2px indianred;
 }
-.hijau{
+.hijau-mapel{
     background-color:#FFEA79 ;
     opacity: 80%;
     box-sizing: border-box;
     border-bottom: 1px solid#000;
 }
-.tombol-aktif:active{
+.tombol-aktif-mapel:active{
     transform: translate(100px,50px);
     -webkit-transform: translate(0px,5px);
     border-bottom: 1px solid;
 }  
-.judul{
+.judul-mapel{
     text-align: center;
     font-size: 30px;
     color: rgb(63, 46, 46);
 }
-.about{
+.about-mapel{
     text-align: center;
     font-size: 35px;
     color: black;
     padding-bottom: 50px;
     padding-top: 50px;
 }
-.col-4{
+.col-4-mapel{
         width: 25%;
         box-sizing: border-box;
         padding: 5px;
@@ -105,7 +98,7 @@
         margin-bottom: 20px;
         padding-top: 50px;       
 }
-.col-4 img{
+.col-4-mapel img{
         padding: 70px;
         margin: 20px;
         height: 329px;
@@ -115,37 +108,37 @@
         box-sizing: border-box;
         transition: 0.5s;
 }
-.col-4 a:hover img{
+.col-4-mapel a:hover img{
         transform: scale(1.2);
 }
-.p1{
+.p1-mapel{
     text-align: center;
     padding: 28px;
     color: bl;
     font-size: 20px;
 }
-.p2{
+.p2-mapel{
     text-align: center;
     padding: 28px;
     color: #fff;
     font-size: 20px;
 }
-.p3{
+.p3-mapel{
     text-align: center;
     padding: 9px;
     color: black;
     font-size: 19px;
 }
-.row{
+.row-mapel{
     margin-top: 15%;
     display: flex;
     padding: 20px;
     justify-content: space-between;
 }
-.gambar{
+.gambar-mapel{
     float: right;
 }
-.gambar-col{
+.gambar-col-mapel{
     flex-basis: 31%;
     background:khaki;
     border-radius: 10px;
@@ -154,7 +147,7 @@
     box-sizing: border-box;
     transition: 0.5s;
 }
-.sejajar{
+.sejajar-mapel{
     padding-top: 5%;
     padding-right: 35px;
 }
