--- a/src/css/style-beranda.css
+++ b/src/css/style-beranda.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-* {
+.Beranda {
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
+  color: white;
 }
 html{
   scroll-behavior: smooth;
@@ -11,50 +11,57 @@ a {
   color: inherit;
   text-decoration: none;
 }
-header {
+.header-beranda {
   background-color: #303879;
   padding: 8px;
 }
-header img {
+.logo-beranda-welearn {
   float: left;
   width: 180px;
   padding-left: 2rem;
   padding-top: 1rem;
 }
-header ul {
+.header-beranda ul {
   float: right;
 }
-header ul li {
+.header-beranda ul li {
   display: inline-block;
   border-radius: 20px;
 }
-header ul li a {
+.header-beranda ul li a {
   padding: 26px 21px;
   display: inline-block;
   font-size: 18px;
-  font-family: 'Hind Siliguri', sans-serif;
+  font-family: "Hind Siliguri", sans-serif;
   color: white;
 }
-header ul li a:hover {
+.header-beranda ul li a:hover {
   background-color: rgb(181, 202, 255);
   color: black;
   border-radius: 20px;
 }
-.active {
+.active-beranda {
   background-color: rgb(181, 202, 255);
   border-radius: 20px;
   color: #000;
 }
-.active a{
+.active-beranda a {
   color: black;
 }
-.background-home img {
+.img-beranda{
   width: 450px;
   height: 350px;
   padding: 0rem 0rem 0rem 95px;
   border-radius: 20px;
 }
-.berandaaa{
+.img-beranda1{
+  width: 450px;
+  height: 350px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: right;
+}
+.berandaaa {
   float: right;
   padding-right: 7rem;
   padding-top: 7rem;
@@ -62,31 +69,31 @@ header ul li a:hover {
 }
 .h1-beranda {
   float: right;
+  font-family: "Cookie", "cursive";
   padding-top: 5rem;
   font-size: 48px;
-  font-family: 'Cookie', 'cursive';
   text-align: left;
   color: rgb(0, 0, 0);
 }
 .h1-beranda2 {
   font-size: 48px;
-  font-family: 'Cookie', 'cursive';
+  font-family: "Cookie", "cursive";
   text-align: right;
   color: rgb(0, 0, 0);
 }
 .h1-beranda span {
   font-size: 48px;
-  font-family: 'Cookie', 'cursive';
+  font-family: "Cookie", "cursive";
   text-align: left;
   color: rgb(17, 32, 60);
 }
 .h1-beranda2 span {
   font-size: 48px;
-  font-family: 'Cookie', 'cursive';
+  font-family: "Cookie", "cursive";
   text-align: right;
   color: rgb(17, 32, 60);
 }
-.garis{
+.garis-beranda {
   border: solid 2px rgb(14, 8, 55);
   width: 270px;
   float: right;
@@ -105,7 +112,7 @@ header ul li a:hover {
   background-color: white;
   color: #000(253, 230, 230);
   border: 7px solid rgb(255, 252, 252);
-  box-shadow: 0 2px 10px 0 rgba(214, 167, 167, 0.6), 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 10px 0 rgba(214, 167, 167, 0.6),0 2px 10px 0 rgba(0, 0, 0, 0.6);
   padding: 8px;
   text-align: center;
   width: 250px;
@@ -120,16 +127,16 @@ header ul li a:hover {
 .date {
   font-size: 14pt;
 }
-.container {
+.container-beranda {
   width: 90%;
   margin: 0 auto;
 }
-.container::after {
+.container-beranda:after {
   content: "";
   display: block;
   clear: both;
 }
-.background-home {
+.background-home-beranda {
   background-image: url("../img/wave-berandaa.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -137,141 +144,78 @@ header ul li a:hover {
   position: relative;
   height: 700px;
 }
-.searchh {
-  padding-left: 58rem;
-  padding-top: 1rem;
-  background-color: #c9d4f2;
-}
-.search {
-  padding: 10px 17px;
-  background-color: #f0f8ff;
-  border: 2px solid #171741;
-  border-radius: 15px;
-}
-.button,
-.icon {
-  position: relative;
-  left: -4px;
-  padding: 12px 17px;
-  border: 0px solid #180d31;
-  background-color: #191941;
-  color: #fafafa;
-  font-weight: bold;
-  border-radius: 15px;
-}
-.button,
-.icon:hover {
-  background-color: #193a66;
-  color: #fafafa;
-  border-radius: 15px;
-}
-.button,
-.icon:active {
-  background-color: #2b1838;
-  border-radius: 15px;
-}
-.teks {
+.teks-beranda {
   padding: 0rem 0rem 2rem 6rem;
 }
-.teks h2 {
+.teks-beranda h2 {
   font-size: 22px;
 }
-.teks p {
+.teks-beranda .p-beranda {
   background-color: #8190dc;
   width: 110px;
   padding: 10px;
   font-size: 18px;
-}
-footer {
-  background-color: white;
-  padding-left: 100px;
-}
-footer ul li {
-  display: inline-block;
-  color: black;
-  margin-right: 12px;
-  padding: 10px;
-  padding-bottom: 4rem;
-}
-.waves {
-  background-image: url("../img/wave4.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  height: 210px;
-}
-.waves h1 {
-  font-size: 45px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  padding: 8rem 0rem 0rem 5rem;
-}
-.waves img {
-  float: right;
-  width: 100px;
-  height: 95px;
-  padding: 6rem 54rem 0rem 0rem;
 }
 .gb-ujian img {
   width: 500px;
   height: 420px;
   padding-left: 2rem;
 }
-.card2{
+.card2-beranda {
   text-align: center;
   float: right;
   padding-top: 4rem;
 }
-.card3{
+.card3-beranda {
   text-align: center;
   float: left;
   padding-top: 3rem;
 }
-.card4{
+.card4-beranda {
   text-align: center;
   float: left;
   padding-top: 21rem;
   padding-left: 6rem;
 }
-.card5{
+.card5-beranda {
   padding-top: 0rem;
 }
-.ini-card5{
-  background-color: #1B1B4A;
+.ini-card5-beranda {
+  background-color: #1b1b4a;
   height: 500px;
   color: white;
   padding: 90px;
 }
-.ini-card5 h1{
+.ini-card5-beranda .h1-beranda-card5 {
   text-align: center;
   font-size: 25px;
   padding-top: 8rem;
 }
-.ini-card5 h3{
+.ini-card5-beranda .h3-bottom-beranda {
   padding-top: 3rem;
   font-size: 17px;
   float: left;
 }
-.contact{
-  width: 120px;
+.contact-beranda {
+  width: 130px;
   padding-top: 4rem;
   padding-right: 46rem;
 }
-.card6{
+.card6-beranda {
   padding-top: 50rem;
 }
-.ini-card6{
+.ini-card6-beranda {
   background-image: url("../img/gb4.jpg");
   width: 100%;
   height: 450px;
   color: white;
 }
-.beranda-welearn{
+.beranda-welearn {
   background-color: #303879;
   height: 400px;
   padding: 30px;
 }
-.box-beranda-welearn3{
+.box-beranda-welearn3 {
   background-image: url("../img/wave.svg");
   background-color: rgb(227, 227, 255);
   width: 1100px;
@@ -279,27 +223,27 @@ footer ul li {
   padding: 30px;
   border-radius: 10px;
 }
-.box-beranda-welearn3 h1{
+.box-beranda-welearn3 .h1-bottom-beranda {
   padding: 50px;
   font-size: 34px;
   font-style: italic;
   text-align: center;
   color: rgb(87, 87, 111);
 }
-.box-beranda-welearn3 span{
+.box-beranda-welearn3 span-beranda {
   color: rgb(18, 5, 36);
   font-size: 34px;
   font-style: italic;
   text-align: center;
 }
-.box-beranda-welearn{
-  background-color: #1e2452;
+.box-beranda-welearn {
+  background-color: #25266a;
   width: 950px;
   height: 300px;
   padding: 30px;
   border-radius: 10px;
 }
-.box {
+.box-beranda {
   width: 300px;
   height: 310px;
   background-color: #4b92a1;
@@ -319,55 +263,520 @@ footer ul li {
   border-radius: 10px;
   float: left;
 }
-.line{
+.line-beranda {
   padding-top: 20px;
 }
-.box-beranda1 img {
+.box-beranda1 .ujian-beranda {
   width: 180px;
   height: 170px;
   padding: 30px;
 }
-.box-beranda2 img {
+.box-beranda1 .teks-w-ujian-beranda{
+  font-size: 20px;
+}
+.box-beranda2 .fresh-beranda {
   width: 180px;
   height: 170px;
   padding: 30px;
 }
-.teks-w-ujian{
+.box-beranda2 .teks-w-fresh-beranda{
+  font-size: 20px;
+}
+.teks-w-ujian-beranda {
   color: rgb(223, 223, 223);
   padding-bottom: 0rem;
   background-color: rgb(82, 114, 131);
   padding: 20px;
   border-radius: 10px;
 }
-.teks-w-fresh{
+.teks-w-fresh-beranda {
   color: rgb(223, 223, 223);
   padding-bottom: 0rem;
   background-color: rgb(131, 82, 119);
   padding: 20px;
   border-radius: 10px;
 }
-.box-beranda-welearn h1{
+.box-beranda-welearn .h1-beranda-card2 {
   color: white;
   float: left;
   text-align: left;
   padding-top: 80px;
   padding-left: 20px;
   font-size: 18px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.box-beranda-welearn2{
-  background-color: #1e2452;
+.box-beranda-welearn2 {
+  background-color: #25266a;
   width: 950px;
   height: 300px;
   padding: 30px;
   border-radius: 10px;
 }
-.box-beranda-welearn2 h1{
+.box-beranda-welearn2 .h1-wfresh-beranda {
   color: white;
   float: right;
   text-align: left;
   padding-top: 80px;
-  padding-right: 256px;
+  padding-right: 287px;
   font-size: 18px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.w-ujian-beranda {
+  padding-top: 11rem;
+  padding-right: 45rem;
+}
+.button-w-ujian-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 200px;
+  height: 50px;
+  background-color: rgb(221, 151, 186);
+  font-size: 16px;
+  color: black;
+}
+.button-w-ujian-beranda:hover {
+  background-color: rgb(43, 15, 37);
+  color: white;
+}
+.w-fresh-beranda {
+  padding-top: 11rem;
+  padding-right: 20rem;
+}
+.button-w-fresh-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 200px;
+  height: 50px;
+  background-color: rgb(184, 151, 221);
+  font-size: 16px;
+  color: black;
+}
+.button-w-fresh-beranda:hover {
+  background-color: rgb(26, 15, 43);
+  color: white;
+}
+.box-beranda-beranda:hover {
+  background-color: rgb(140, 181, 209);
+  transform: scale(1.1);
+}
+.box-beranda-beranda h2 {
+  color: white;
+  padding-top: 8.5rem;
+}
+.box-beranda p {
+  padding-top: 110px;
+  padding-right: 1rem;
+  float: right;
+  font-size: 18px;
+}
+.box-beranda img {
+  width: 30px;
+  height: 30px;
+  padding-top: 100px;
+  padding-left: 10rem;
+}
+.inibutton-beranda {
+  padding-top: 30px;
+  padding-left: 10rem;
+}
+.btn-primary-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 130px;
+  height: 40px;
+  background-color: rgb(213, 213, 213);
+  font-size: 16px;
+}
+.btn-primary-beranda:hover {
+  background-color: rgb(44, 44, 75);
+  color: white;
+}
+.active-2-beranda {
+  background-color: #6084bb;
+}
+.wsat-beranda {
+  padding-top: 9rem;
+}
+#ini-wsat-beranda {
+  height: 520px;
+  background-color: white;
+}
+#ini-wsat-beranda img {
+  float: right;
+  padding-top: 2rem;
+  width: 500px;
+}
+.text-wsat-beranda .h3-beranda1 {
+  padding-top: 4rem;
+  float: left;
+  color: rgb(52, 52, 67);
+  font-size: 20px;
+  padding-left: 1rem;
+}
+.text-wsat-beranda .h3-beranda2 {
+  float: left;
+  color: rgb(52, 52, 67);
+  font-size: 20px;
+  padding-left: 1rem;
+}
+.button-wsat-beranda {
+  padding-left: 7rem;
+}
+.button-wsat-beranda2{
+  padding-left: 2rem;
+}
+.btn-wsat2-beranda2 {
+  background-color: rgb(63, 38, 97);
+  border-radius: 25px;
+  border: none;
+  box-shadow: 0px 1px 8px #8484da;
+  cursor: pointer;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 80px;
+  transition: 0.25px;
+  width: 260px;
+}
+.btn-wsat2-beranda2 a {
+  color: white;
+  font-size: 17px;
+}
+.btn-wsat2-beranda2:hover {
+  background-color: rgb(106, 47, 112);
+}
+.ws-beranda {
+  padding-top: 18px;
+  text-align: center;
+  font-size: 22px;
+  color: white;
+  background-color: rgb(45, 37, 79);
+  border-radius: 10px;
+  height: 40px;
+}
+.wsat2-beranda {
+  padding-top: 6rem;
+  padding-bottom: 4rem;
+}
+#ini-wsat2-beranda {
+  background-color: white;
+  padding: 50px;
+  height: 630px;
+}
+#ini-wsat2-beranda .img-beranda2 {
+  float: left;
+  padding-top: 2rem;
+  width: 420px;
+}
+.text-wsat2-beranda {
+  color: rgb(52, 52, 67);
+  font-size: 16px;
+  float: left;
+  padding-left: 7rem;
+  padding-top: 7rem;
+  padding-bottom: 3rem;
+}
+.text-bottom-beranda .h2-beranda-wsat2 {
+  padding-top: 9rem;
+  color: rgb(52, 52, 67);
+  font-size: 20px;
+}
+.text-bottom-beranda .h3-beranda-wsat2 {
+  color: rgb(52, 52, 67);
+  padding-bottom: 2rem;
+  font-size: 18px;
+}
+.button-wsat2-beranda {
+  padding-left: 7rem;
+}
+.button-wsat-beranda2{
+  padding-top: 10rem;
+}
+.btn-wsat2-beranda {
+  background-color: rgb(63, 38, 97);
+  border-radius: 25px;
+  border: none;
+  box-shadow: 0px 1px 8px #8484da;
+  cursor: pointer;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 80px;
+  transition: 0.25px;
+  width: 260px;
+}
+.btn-wsat2-beranda a {
+  color: white;
+  font-size: 17px;
+}
+.btn-wsat2-beranda:hover {
+  background-color: rgb(106, 47, 112);
+}
+.wsat3-beranda {
+  padding-top: 3rem;
+  background-color: rgb(251, 251, 255);
+}
+.ws3-beranda {
+  padding: 18px;
+  text-align: center;
+  font-size: 22px;
+  color: white;
+  background-color: rgb(39, 31, 72);
+  border-radius: 20px;
+}
+.box-card-beranda {
+  padding-top: 2rem;
+  height: 750px;
+  display: flex;
+  justify-content: center;
+}
+.box-card-beranda .td-beranda {
+  text-align: center;
+  padding: 20px;
+}
+.box-card-beranda .tr-beranda {
+  text-align: center;
+  padding: 2rem;
+}
+.box-kls7-beranda {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 320px;
+  height: 600px;
+  background-color: white;
+  border-radius: 20px;
+  float: right;
+  box-shadow: 5px 5px 5px 5px rgba(153, 138, 167, 0.7);
+  padding-bottom: 4rem;
+}
+.box-kls8-beranda {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 320px;
+  height: 600px;
+  background-color: white;
+  border-radius: 20px;
+  float: right;
+  box-shadow: 5px 5px 5px 5px rgba(153, 138, 167, 0.7);
+  padding-bottom: 4rem;
+}
+.box-kls7-beranda img {
+  width: 250px;
+  height: 250px;
+  padding: 30px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+}
+.box-kls8-beranda img {
+  width: 250px;
+  height: 250px;
+  padding: 30px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.box-kls7-beranda:hover {
+  transform: scale(1.1);
+  transition: 1s;
+}
+.box-kls8-beranda:hover {
+  transform: scale(1.1);
+  transition: 1s;
+}
+.button-kls7-beranda:hover {
+  background-color: rgb(192, 112, 134);
+  color: black;
+}
+.button-kls7-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 170px;
+  height: 70px;
+  background-color: rgb(169, 112, 192);
+  font-size: 16px;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+.button-kls8-beranda:hover {
+  background-color: rgb(192, 112, 134);
+  color: black;
+}
+.button-kls8-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 170px;
+  height: 70px;
+  background-color: rgb(169, 112, 192);
+  font-size: 16px;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+.button-kls7-beranda a {
+  color: white;
+  padding: 13%;
+}
+.button-kls8-beranda a {
+  color: white;
+  padding: 13%;
+}
+.text-kls-beranda {
+  color: black;
+  font-size: 25px;
+  text-align: center;
+}
+.text-kls2-beranda {
+  color: black;
+  font-size: 20px;
+  padding: 2rem;
+  text-align: center;
+}
+.wsat4-beranda {
+  padding-top: 0rem;
+}
+#ini-wsat4-beranda {
+  background-color: #1b1b4a;
+  height: 500px;
+  color: white;
+}
+.bgquotes-beranda {
+  padding-top: 0rem;
+}
+.quotes-beranda-beranda {
+  background-image: url("../img/gb6.jpg");
+  height: 400px;
+}
+.box-quotes-beranda {
+  background-color: tomato;
+  padding-left: 5rem;
+  width: 800px;
+  height: 400px;
+}
+#bq-beranda {
+  padding-top: 65rem;
+}
+.footer-beranda {
+  text-align: center;
+  background-color: rgb(236, 221, 255);
+  padding-bottom: 30px;
+  padding-top: 3rem;
+  font-size: 26px;
+  padding-right: 2rem;
+}
+.footer-beranda .a-beranda {
+  margin: 0 20px;
+  padding-right: 1rem;
+}
+.footer-beranda .small-beranda{
+  color: black;
+}
+.img-contact-beranda {
+  width: 50px;
+  float: left;
+  padding-top: 3rem;
+}
+.col-3-beranda {
+  width: 21%;
+  box-sizing: border-box;
+  float: right;
+  padding: 50px 10px;
+  text-align: center;
+}
+.col-3-beranda .h4-bottom-beranda {
+  padding-bottom: 10px;
+  border-bottom: 1px solid;
+  margin-bottom: 15px;
+}
+.col-3-beranda .p-beranda {
+  text-align: center;
+}
+.card7-beranda {
+  padding-top: 25rem;
+  background-color: white;
+  height: 900px;
+}
+.card7-beranda .table-beranda {
+    display: flex;
+  justify-content: center;
+  float: right;
+}
+.card7-beranda .td-beranda {
+  text-align: center;
+  padding: 20px;
+}
+.h1-card7-beranda {
+  text-align: center;
+  color: rgb(46, 45, 45);
+}
+.box7-beranda {
+  width: 330px;
+  height: 600px;
+  background-color: white;
+  border-radius: 20px;
+  float: right;
+  box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.7);
+}
+.box9-beranda {
+  width: 330px;
+  height: 600px;
+  background-color: white;
+  border-radius: 20px;
+  float: right;
+  box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.7);
+}
+.box7-beranda img {
+  width: 200px;
+  height: 200px;
+  padding: 30px;
+  padding-top: 2rem;
+}
+.box8-beranda img {
+  width: 400px;
+  height: 410px;
+  padding: 10px;
+  padding-top: 18rem;
+}
+.box9-beranda img {
+  width: 200px;
+  height: 200px;
+  padding: 30px;
+  padding-top: 2rem;
+}
+.button-7-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 170px;
+  height: 80px;
+  background-color: rgb(192, 112, 134);
+  font-size: 16px;
+  color: white;
+}
+.button-9-beranda {
+  border-radius: 15px;
+  border: solid 2px rgb(213, 213, 213);
+  width: 170px;
+  height: 80px;
+  background-color: rgb(192, 112, 134);
+  font-size: 16px;
+  color: white;
+}
+.button-7-beranda a {
+  color: white;
+}
+.button-9-beranda a {
+  color: white;
+}
+.text7-beranda,
+.text8-beranda,
+.text9-beranda {
+  padding-top: 0rem;
+  color: rgb(49, 49, 49);
+  font-size: 22px;
+}
+.texts7-beranda,
+.texts8-beranda,
+.texts9-beranda {
+  padding-top: 1rem;
+  color: rgb(80, 79, 79);
+  font-size: 18px;
 }
