--- a/src/css/style-wemateri.css
+++ b/src/css/style-wemateri.css
@@ -3,54 +3,54 @@
     padding: 0;
     font-family: 'Quicksand', sans-serif;
 }
-header{
+.header-wemateri{
     height: 70px;
 }
-header h1{
+.header-wemateri h1{
     display: inline-block;
     padding-top: 20px;
     font-size: 35px;
     padding-left: 30px;
 }
-header h1 a{
+.header-wemateri h1 a{
     transition: .4s;
     color: white
 }
-header h1 a:hover{
+.header-wemateri h1 a:hover{
     color:rgb(145, 32, 71);
 }
-header ul{
+.header-wemateri ul{
     float: right;
 }
-header ul li{
+.header-wemateri ul li{
     padding: 26px;
     display: inline-block;
     font-size: 18px;
 }
-header ul li a{
+.header-wemateri ul li a{
     transition: 0.3s;
     color: white
 }
-header ul li a:hover{
+.header-wemateri ul li a:hover{
     color: rgb(145, 32, 71);
 }
 a{
     text-decoration: none;
 }
-.container{
+.container-wemateri{
     width: 90%;
     margin: 0 auto;
 }
-.container::after{
+.container-wemateri:after{
     content: '';
     display: block;
     clear: both;
 }
-#banner img{
+#banner-wemateri img{
     padding: 15px;
     width: 180px;
 }
-#banner{
+#banner-wemateri{
     background-image: url("../img/wave-wmat.svg");
     background-position: center;
     background-repeat: no-repeat;
@@ -59,66 +59,74 @@ a{
     width: 100%;
     height: 260px;
 }
-.banner-left img{
+.banner-left-wemateri img{
     width: 450px;
     float: left;
     padding-left: 2rem;
 }
-.banner-left2 img{
+.banner-left2-wemateri img{
     width: 500px;
     float: left;
     padding-left: 3rem;
 }
-.banner-right img{
+.banner-right-wemateri img{
     width: 400px;
     float: right;
     padding-top: 2rem;
 }
-.banner-left{
+.banner-left-wemateri{
    padding-bottom: 8rem;
    padding-top: 1rem;
 }
-.banner-left2{
+.banner-left2-wemateri{
     padding-bottom: 4rem;
 }
-.banner-right{
+.banner-right-wemateri{
     padding-bottom: 4rem;
 }
-.text-banner-smp{
+.text-banner-smp-wemateri{
     float: right;
     padding-top: 5rem;
     padding-right: 2rem;
     font-size: 16px;
 }
-.text-banner-smp-right{
+.text-banner-smp-right-wemateri{
     float: left;
     padding-top: 9rem;
     padding-left: 1rem;
     font-size: 12px;
     font-style: oblique;
 }
-.text-banner{
+.text-banner-wemateri{
     float: right;
     padding-top: 2.5rem;
     padding-right: 2rem;
-    font-size: 18px;
 }
-.box-h3{
+.h2-text-banner-wemateri{
+    font-size: 26px;
+}
+.h3-text-banner-wemateri{
+    font-size: 21px;
+}
+.box-h3-wemateri{
+    float: left;
     width: 200px;
     height: 80px;
     background-color: rgb(53, 12, 53);
     border-radius: 20px;
     box-shadow: 3px 3px 3px 3px rgba(44, 33, 58, 0.8);
 }
-.box-h3 h3{
-    padding: 25px;
+.box-h3-wemateri h3{
     color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 11%;
 }
-.ini-box-materi{
+.ini-box-wemateri{
     padding-top: 5rem;
     padding-right: 4rem;
 }
-.box-materi{
+.box-wemateri{
     width: 510px;
     height: 190px;
     background-color: white;
@@ -128,18 +136,18 @@ a{
     box-shadow: 4px 4px 4px 4px rgba(26, 19, 39, 0.7);
     color: rgb(0, 0, 0);
 }
-.box-materi:hover{
+.box-wemateri:hover{
     background-color: rgb(151, 135, 232);
     transform: scale(1.1);
     transition: 1s;
     color:white;
 }
-#SMP{
+#SMP-wemateri{
     padding-top: 2rem;
     padding-bottom: 2rem;
     background-color: rgb(23, 26, 68);
 }
-#SMP img {
+#SMP-wemateri img {
     float: right;
     padding-right: 4rem;
     padding-top: 5rem;
@@ -147,12 +155,12 @@ a{
     width: 400px;
     height: 400px;
 }
-#SMA{
+#SMA-wemateri{
     padding-top: 1rem;
 
     background-color: white;
 }
-#SMA img {
+#SMA-wemateri img {
     float: left;
     padding-left: 2rem;
     padding-top: 5rem;
@@ -160,23 +168,25 @@ a{
     width: 450px;
     height: 380px;
 }
-.text-smp{
+.text-smp-wemateri{
     padding-top: 11rem;
+    padding-bottom: 2rem;
     color: white;
     font-size: 22px;
 }
-.text-sma{
+.text-sma-wemateri{
     padding-top: 11rem;
     padding-right: 1rem;
+    padding-bottom: 2rem;
     color: black;
     font-size: 22px;
     float: right;
 }
-.button-materi2{
+.button-wemateri2{
     float: right;
     padding-right: 19rem;
 }
-.btn-materi{
+.btn-wemateri{
     background-color: white;
     border-radius: 25px;
     border: none;
@@ -188,14 +198,14 @@ a{
     transition: 0.25px;
     width: 260px;
 }
-.btn-materi a{
+.btn-wemateri a{
     color: black;
     font-size: 17px;
 }
-.btn-materi:hover{
+.btn-wemateri:hover{
     background-color: rgb(159, 157, 255);
 }
-.btn-materi2{
+.btn-wemateri2{
     background-color: rgb(19, 16, 61);
     border-radius: 25px;
     border: none;
@@ -207,27 +217,27 @@ a{
     transition: 0.25px;
     width: 260px;
 }
-.btn-materi2 a{
+.btn-wemateri2 a{
     color: white;
     font-size: 17px;
 }
-.btn-materi2:hover{
+.btn-wemateri2:hover{
     background-color: rgb(80, 79, 186);
 }
-.card3{
+.card3-wemateri{
     padding-top: 4rem;
     padding-right: 7rem;
     background-color: rgb(208, 188, 253);
     height: 700px;
 }
-.card3 table {
+.card3-wemateri table {
   float: right;
 }
-.card3 td {
+.card3-wemateri td {
   text-align: center;
   padding: 20px;
 }
-.box-kls7 {
+.box-kls7-wemateri {
   background-image: url("../img/wvsmpp.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -241,7 +251,7 @@ a{
   box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.7);
   padding-bottom: 4rem;
 }
-.box-kls8 {
+.box-kls8-wemateri {
   background-image: url("../img/wvsmpp.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -255,7 +265,7 @@ a{
   box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.7);
   padding-bottom: 4rem;
 }
-.box-kls9 {
+.box-kls9-wemateri {
   background-image: url("../img/wvsmpp.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -269,44 +279,44 @@ a{
   box-shadow: 5px 5px 5px 5px rgba(255, 255, 255, 0.7);
   padding-bottom: 4rem;
 }
-.box-kls7 img {
+.box-kls7-wemateri img {
   width: 250px;
   height: 250px;
   padding: 30px;
   padding-bottom: 20px;
   padding-top: 10px;
 }
-.box-kls8 img {
+.box-kls8-wemateri img {
   width: 250px;
   height: 250px;
   padding: 30px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
-.box-kls9 img {
+.box-kls9-wemateri img {
   width: 250px;
   height: 250px;
   padding: 30px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
-.box-kls7:hover{
+.box-kls7-wemateri:hover{
   transform: scale(1.1);
   transition: 1s;
 }
-.box-kls8:hover{
+.box-kls8-wemateri:hover{
   transform: scale(1.1);
   transition: 1s;
 }
-.box-kls9:hover{
+.box-kls9-wemateri:hover{
   transform: scale(1.1);
   transition: 1s;
 }
-.button-kls7:hover {
+.button-kls7-wemateri:hover {
   background-color: rgb(193, 163, 235);
   color: black;
 }
-.button-kls7 {
+.button-kls7-wemateri {
   border-radius: 15px;
   border: solid 2px rgb(213, 213, 213);
   width: 170px;
@@ -315,11 +325,11 @@ a{
   font-size: 16px;
   color: white;
 }
-.button-kls8:hover {
+.button-kls8-wemateri:hover {
   background-color: rgb(193, 163, 235);
   color: black;
 }
-.button-kls8{
+.button-kls8-wemateri{
   border-radius: 15px;
   border: solid 2px rgb(213, 213, 213);
   width: 170px;
@@ -328,11 +338,11 @@ a{
   font-size: 16px;
   color: white;
 }
-.button-kls9:hover {
+.button-kls9-wemateri:hover {
   background-color: rgb(193, 163, 235);
   color: black;
 }
-.button-kls9 {
+.button-kls9-wemateri {
   border-radius: 15px;
   border: solid 2px rgb(213, 213, 213);
   width: 170px;
@@ -341,21 +351,21 @@ a{
   font-size: 16px;
   color: white;
 }
-.button-kls7 a{
+.button-kls7-wemateri a{
     color: white;
 }
-.button-kls8 a{
+.button-kls8-wemateri a{
     color: white;
 }
-.button-kls9 a{
+.button-kls9-wemateri a{
     color: white;
 }
-.text-kls{
+.text-kls-wemateri{
     padding-top: 2rem;
     color: white;
     font-size: 25px;
 }
-.text-kls2{
+.text-kls2-wemateri{
     padding-top: 1rem;
     color: rgb(202, 202, 202);
     font-size: 20px;
@@ -367,20 +377,20 @@ html{
     .mobile-menu{
         display: block;
     }
-    header ul {
+    .header-wemateri ul {
         display: none;
     }
     .login1{
         width: 40%;
         left: 35%;
     }
-    .col-4{
+    .col-4-wemateri{
         width: 50%;
     }
-    .col-3{
+    .col-3-wemateri{
         width: 100%;
     }
-    #form{
+    #form-wemateri{
         width: 87%;
     }
 }
