--- a/src/css/style-signup.css
+++ b/src/css/style-signup.css
@@ -40,7 +40,7 @@ a {
 .label-signup{
     font-size: 11pt;
 }
-label h2{
+.label1-signup h2{
       padding-bottom: 13px;
       font-size: 16px;
 }
