--- a/src/css/style-ujian.css
+++ b/src/css/style-ujian.css
@@ -3,7 +3,7 @@
   margin: 0;
   font-family: 'Quicksand', sans-serif;
 }
-.header-materi {
+.header-materi-ujian {
   position: fixed;
   background-color: rgb(210, 205, 255);
   padding: 20px;
@@ -11,24 +11,24 @@
   height: 30px;
   float: right;
 }
-.header-video {
+.header-video-ujian {
   position: fixed;
   background: grey;
   padding: 20px;
   width: 100%;
   height: 30px;
 }
-.left-area span {
+.left-area-ujian .span-area-ujian {
   color: white;
   padding: 50px;
   text-align: center;
   font-size: 24px;
 }
-.right-area {
+.right-area-ujian {
   padding-top: 2rem;
   padding-right: 1rem;
 }
-.sidebar {
+.sidebar-ujian {
   background: #1d3a67;
   padding-top: 30px;
   position: fixed;
@@ -39,21 +39,21 @@
   transition-property: left;
   float: left;
 }
-.sidebar2 {
+.sidebar2-ujian {
   padding-top: 2rem;
 }
-.sidebar .profile-img {
+.sidebar-ujian .profile-img-ujian {
   width: 100px;
   height: 100px;
   border-radius: 100px;
   margin-bottom: 10px;
 }
-.sidebar2 h3,
-h4 {
+.sidebar2-ujian .h3-sidebar2-ujian,
+.h4-sidebar2-ujian {
   padding: 5px;
   color: white;
 }
-.sidebar a {
+.sidebar-ujian a {
   color: white;
   display: block;
   width: 100%;
@@ -62,13 +62,13 @@ h4 {
   padding-left: 40px;
   box-sizing: border-box;
 }
-.sidebar a:hover {
+.sidebar-ujian a:hover {
   background: #6084bb;
 }
-.sidebar i {
+.sidebar-ujian i {
   padding-right: 10px;
 }
-.log-out {
+.log-out-ujian {
   padding: 10px;
   background: #1d3a67;
   text-decoration: none;
@@ -82,10 +82,10 @@ h4 {
   transition: 0.5s;
   border-radius: 20px;
 }
-.log-out:hover {
+.log-out-ujian:hover {
   background: #6084bb;
 }
-label #sidebar-btn {
+.label-ujian #sidebar-btn-ujian {
   z-index: 1;
   color: rgb(29, 29, 58);
   position: fixed;
@@ -96,75 +96,75 @@ label #sidebar-btn {
   transition: 0.5s;
   transition-property: color;
 }
-label #sidebar-btn:hover {
+.label-ujian #sidebar-btn-ujian:hover {
   color: white;
 }
-#check:checked ~ .sidebar {
+#check-ujian:checked ~ .sidebar-ujian {
   left: -190px;
 }
-#check:checked ~ .sidebar a span {
+#check-ujian:checked ~ .sidebar-ujian a .span-left-area-ujian {
   display: none;
 }
-#check:checked ~ .sidebar a {
+#check-ujian:checked ~ .sidebar-ujian a {
   font-size: 20px;
   margin-left: 170px;
   width: 80px;
 }
-.content {
+.content-ujian {
   padding-bottom: 35px;
   padding-top: 100px;
   margin-left: 250px;
   transition: 0.5s;
   background-color: rgb(210, 205, 255);
 }
-.text-bindo {
+.text-bindo-ujian {
   width: 100%;
   height: 140px;
   background-color: white;
   border-radius: 20px;
 }
-.text-bindo h1 {
+.text-bindo-ujian h1 {
   color: black;
   font-size: 28px;
   padding-left: 38px;
   padding-top: 58px;
 }
-.text-decoration {
+.text-decoration-ujian {
   text-decoration: none;
 }
-.active-2 {
+.active-2-ujian {
   background-color: #6084bb;
 }
-#check:checked ~ .content {
+#check-ujian:checked ~ .content-ujian {
   margin-left: 60px;
 }
-#check {
+#check-ujian {
   display: none;
 }
-.boxx-colom {
+.boxx-colom-ujian {
   padding: 40px;
 }
-.box-colom {
+.box-colom-ujian {
   padding: 30px;
   width: 960px;
   height: 280px;
   background-color: white;
   border-radius: 30px;
 }
-.ini-colom1 {
+.ini-colom1-ujian {
   padding: 20px;
 }
-.ini-colom2 {
+.ini-colom2-ujian {
   padding: 20px;
 }
-.colom1 {
+.colom1-ujian {
   padding: 30px;
   width: 570px;
   height: 35px;
   background-color: rgb(58, 53, 68);
   border-radius: 20px;
 }
-.colom2 {
+.colom2-ujian {
   padding-top: 30px;
   padding: 30px;
   width: 570px;
@@ -172,54 +172,54 @@ label #sidebar-btn:hover {
   background-color: rgb(60, 50, 73);
   border-radius: 20px;
 }
-.colom1 h1 {
+.colom1-ujian h1 {
   padding-top: 5px;
   color: white;
 }
-.colom2 h1 {
+.colom2-ujian h1 {
   padding-top: 12px;
   color: white;
 }
-.tanggal {
+.tanggal-ujian {
   font-size: 19px;
   float: left;
   padding-left: 2rem;
 }
-.waktu {
+.waktu-ujian {
   font-size: 19px;
   float: left;
   padding-left: 4rem;
 }
-.jumlahsoal {
+.jumlahsoal-ujian {
   font-size: 19px;
   float: left;
   padding-left: 4rem;
 }
-.status {
+.status-ujian {
   font-size: 19px;
   float: left;
   padding-left: 3rem;
 }
-.tanggal1 {
+.tanggal1-ujian {
   font-size: 18px;
   float: left;
   padding-left: 1rem;
 }
-.waktu1 {
+.waktu1-ujian {
   font-size: 19px;
   float: left;
   padding-left: 3rem;
 }
-.jumlahsoal1 {
+.jumlahsoal1-ujian {
   font-size: 19px;
   float: left;
   padding-left: 2rem;
 }
-.status1 {
+.status1-ujian {
   font-size: 19px;
   padding-left: 27rem;
 }
-.kerjakan {
+.kerjakan-ujian {
   color: black;
   background-color: rgb(180, 181, 255);
   border-radius: 20px;
@@ -231,7 +231,7 @@ label #sidebar-btn:hover {
   width: 140px;
   font-size: 18px;
 }
-.kerjakan:hover {
+.kerjakan-ujian:hover {
   color: white;
   background-color: rgb(57, 57, 102);
   border-radius: 20px;
