--- a/src/css/style-absensi.css
+++ b/src/css/style-absensi.css
@@ -25,40 +25,39 @@
     height: 240px;
 }
 #absensi{
-    font-family: "Raleway Thin",sans-serif;
     letter-spacing: 4px;
-    text-align: center;
     padding-top: 10rem;
+    text-align: center;
 }
-#card-content {
+#card-content-absensi {
     padding: 5px 40px;
 }
 
-#card-title {
+#card-title-absensi {
     letter-spacing: 4px;
-    padding-bottom: 23px;
-    padding-top: 0px;
+    padding-bottom: 0rem;
+    padding-top: 2rem;
     text-align: center;
     font-size: 20px;
 }
 
-.underline-title {
+.underline-title-absensi {
     background: #071931;
-    margin: 2rem auto 0 auto;
     height: 2px;
     width: 89px;
 }
 .absensi-form{
     padding-right: 50px;
 }
-.form {
-    align-items: left;
+.form-absensi {
     padding: 20px;
     display: flex;
     flex-direction: column;
-}
+    justify-content: left;
 
-.form-content{
+}
+.form-content-absensi{
+    width: 90%;
     background: white;
     border: none;
     outline: none;
@@ -67,7 +66,7 @@ input{
     padding-left: 15px;
     border-radius: 10px;
 }
-.submit {
+.submit-absensi {
     background: -webkit-radial-gradient(right, #B4CDF1, rgb(253, 254, 255));
     border: none;
     border-radius: 21px;
@@ -79,9 +78,8 @@ input{
     margin-top: 10px;
     transition: 0.25s;
     width: 150px;
-    font-family: "Raleway SemiBold",sans-serif;
 }
-.submit:hover {
+.submit-absensi:hover {
     background: -webkit-radial-gradient(right, #fdc6ff, rgb(199, 151, 185));
     border: none;
     border-radius: 21px;
@@ -94,11 +92,8 @@ input{
     transition: 0.25s;
     width: 150px;
 }
-.button-submit{
-    padding-left: 16rem;
-}
 
-#foto{
+#foto-absensi{
     width: 400px;
     height: 400px;
     float: left;
@@ -109,22 +104,37 @@ input{
     border-radius: 8%;
 }
 
-#foto img{
+#foto-absensi img{
     width: 250px;
     height: 250px;
     border-radius: 30px;
-    align-items: center;
     padding-top: 50px;
 }
 
-#foto p{
-    font-family: "Raleway SemiBold",sans-serif;
-    
+.label-absensi .h1-absensi{
+    font-size: 16px;
+    padding-right: 29rem;
 }
-
-label{
+.label-absensi .h1-absensi2{
+    font-size: 16px;
+    padding-right: 32rem;
+}
+.label-absensi .h1-absensi3{
+    font-size: 16px;
+    padding-right: 29rem;
+}
+.label-absensi .h1-absensi4{
+    font-size: 16px;
+    padding-right: 29rem;
+}
+.label-absensi .h1-absensi5{
+    font-size: 16px;
+    padding-right: 31rem;
+}
+.label-absensi{
     padding: 10px;
 }
-select{
+.select-absensi{
     border-radius: 10px;
+    width: 93%;
 }
