--- a/src/css/style-jadwal.css
+++ b/src/css/style-jadwal.css
@@ -10,7 +10,7 @@
     background-repeat: repeat;
     background-position: center;
 }
-.layer-mapel{
+.layer-jadwal{
     position: relative;
     box-sizing: border-box;
     border-radius: 40px;
@@ -19,88 +19,84 @@
     height: 85%;
     background-color: rgba(0, 0, 0, 0.19);
 }
-.div-row-mapel{
+.div-row-jadwal{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.dua-col-mapel{
+.dua-col-jadwal{
     padding:10px 10px;
     transition: 0.5s;
 }
-.dua-col-mapel:hover{
+.dua-col-jadwal:hover{
     padding-top: 10px;
     box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.19);
 }
-.button-mapel{
+.button-jadwal{
     padding: 100px;
     padding-left: 0;
 }
-.tombol-mapel{
-    padding-top: 3rem;
+.tombol-jadwal{
+    padding: 15px;
     padding-left: 0;
 }
-.animasi-mapel{
+.animasi-jadwal{
     transition: all 0.1s;
     -webkit-transition: all 0.1s;
 }
-.tombol-aktif-mapel{
+.tombol-aktif-jadwal{
+    padding: 20px 80px;
     border-radius: 10px;
     font-family: rubik;
     font-size: 25px;
     color : #fff;
     text-decoration: none;
 }
-.button-aktif-mapel{
+.button-aktif-jadwal{
     padding: 20px 40px;
     border-radius: 5px;
     font-size: 20px;
-    color : rgb(0, 0, 0);
+    color : rgb(63, 46, 46);
     text-decoration: none;
+    float: right;
     margin-top: 20%;
-    background-color: rgb(255, 226, 188);
-    opacity: 90%;
 }
-.button-aktif-mapel:hover{
-    background-color: rgb(73, 64, 51);
-    color: white;
-}
-.button-aktif-mapel:active{
+.button-aktif-jadwal:active{
     transform: translate(100px,50px);
     -webkit-transform: translate(0px,5px);
     border-bottom: 1px solid;
     background-color:coral;
 }  
-.ungu-mapel{
+.ungu-jadwal{
     background-color:#220FF4;
     opacity: 41%;;
     border-bottom: 5px solid indianred;
     text-shadow: 0px -2px indianred;
 }
-.hijau-mapel{
+.hijau{
     background-color:#FFEA79 ;
     opacity: 80%;
     box-sizing: border-box;
     border-bottom: 1px solid#000;
 }
-.tombol-aktif-mapel:active{
+.tombol-aktif-jadwal:active{
     transform: translate(100px,50px);
     -webkit-transform: translate(0px,5px);
     border-bottom: 1px solid;
 }  
-.judul-mapel{
+.judul-jadwal{
     text-align: center;
     font-size: 30px;
     color: rgb(63, 46, 46);
 }
-.about-mapel{
+.about-jadwal{
     text-align: center;
     font-size: 35px;
     color: black;
     padding-bottom: 50px;
     padding-top: 50px;
 }
-.col-4-mapel{
+.col-4-jadwal{
         width: 25%;
         box-sizing: border-box;
         padding: 5px;
@@ -109,7 +105,7 @@
         margin-bottom: 20px;
         padding-top: 50px;       
 }
-.col-4-mapel img{
+.col-4-jadwal img{
         padding: 70px;
         margin: 20px;
         height: 329px;
@@ -119,37 +115,37 @@
         box-sizing: border-box;
         transition: 0.5s;
 }
-.col-4-mapel a:hover img{
+.col-4-jadwal a:hover img{
         transform: scale(1.2);
 }
-.p1-mapel{
+.p1-jadwal{
     text-align: center;
     padding: 28px;
     color: bl;
     font-size: 20px;
 }
-.p2-mapel{
+.p2-jadwal{
     text-align: center;
     padding: 28px;
     color: #fff;
     font-size: 20px;
 }
-.p3-mapel{
+.p3-jadwal{
     text-align: center;
     padding: 9px;
     color: black;
     font-size: 19px;
 }
-.row-mapel{
+.row-jadwal{
     margin-top: 15%;
     display: flex;
     padding: 20px;
     justify-content: space-between;
 }
-.gambar-mapel{
+.gambar-jadwal{
     float: right;
 }
-.gambar-col-mapel{
+.gambar-col-jadwal{
     flex-basis: 31%;
     background:khaki;
     border-radius: 10px;
@@ -158,17 +154,17 @@
     box-sizing: border-box;
     transition: 0.5s;
 }
-.sejajar-mapel{
+.sejajar-jadwal{
     padding-top: 5%;
     padding-right: 35px;
 }
 
 @media(max-width:700px){
-.row-mapel{
+.row-jadwal{
         flex-direction: column;
     }
 }
-.box1-mapel{
+.box1-jadwal{
     width: 600px;
     height: 170px;
     background: #8386DD;
@@ -179,14 +175,26 @@
     padding-top: 20px;
     padding: inherit;
 }
-.sejajar-mapel{
+.jadwal-col{
+    flex-basis: 31%;
+    background:#c4c6ff;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+.jadwal-col:hover{
+    box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.19);
+}
+.sejajar-jadwal{
     display: flex;
     justify-content:space-between;
     font-size: 30px;
     text-align: center;
     padding-top: 5%;
 }
-.waktu-col-mapel{
+.waktu-col-jadwal{
     flex-basis: 14%;
     background:#486383;
     border-radius: 30px;
@@ -196,7 +204,7 @@
     transition: 0.5s;
     width: 600px;
 }
-.lua-mapelr{
+.luar-jadwal{
     background-image: url("../img/wavess.svg");
     background-size: cover;
     background-color: rgb(202, 202, 248);
@@ -207,7 +215,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-.dalam-mapel{
+.dalam-jadwal{
     position: relative;
     box-sizing: border-box;
     width: 90%;
@@ -215,14 +223,14 @@
     background-color: #FFFFFF;
     border-radius: 30px;
 }
-.putih-mapel{
+.putih-jadwal{
     background-color: #fff;
     position: relative;
     height: 100%;
     margin-top: 4%;
     margin-bottom: 4%;
 }
-.awan-mapel{
+.awan-jadwal{
     position: relative;
     box-sizing: border-box;
     border-radius: 50px;
@@ -235,7 +243,7 @@
     background-size: cover;
     background-image: url("../img/wal.png");
 }
-.box2-mapel{
+.box2-jadwal{
     padding-top: 10px;
     width: 11%;
     height: 65px;
@@ -243,7 +251,7 @@
     border-radius: 10px;
     text-align: center;
 }
-.box3{
+.box3-jadwal{
     padding-top: 10px;
     width: 11%;
     height: 65px;
@@ -251,11 +259,11 @@
     border-radius: 10px;
     text-align: center;
 }
-.footer-mapel {
+footer {
     background-color:white;
     padding-left: 100px;
 }
-.footer-mapel ul li {
+footer ul li {
     display: inline-block;
     color: black;
     margin-right: 12px;
