--- a/src/css/style-wexam.css
+++ b/src/css/style-wexam.css
@@ -3,14 +3,14 @@
     padding: 0;
     font-family: 'Quicksand', sans-serif;
 }
-.judul-wex{
+.judul-wexam{
     text-align: center;
 }
-.judul-wex span{
+.judul-wexam span{
 font-size: 30px;
 text-transform: uppercase;
 }
-.judul-wex h1{
+.judul-wexam h1{
     font-size: 2rem;
     padding: 20px;
 }
@@ -20,7 +20,7 @@ text-transform: uppercase;
     justify-content: space-between;
     padding-top: 30px;
 }
-.wexam-container .box{
+.wexam-container .box-wxam{
     text-align: center;
     padding: 30px;
     flex-basis: 30%;
@@ -31,7 +31,7 @@ text-transform: uppercase;
     transition: 0.5s;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.19);
 }
-.wexam-container .box .bx{
+.wexam-container .box-wxam .bx{
     font-size: 34px;
     padding: 10px;
     background: #eee;
@@ -39,44 +39,44 @@ text-transform: uppercase;
     color: var(--main-color);
     text-align: justify;
 }
-.wexam-container .box .bxs-book-reader{
+.wexam-container .box-wxam .bxs-book-reader{
     color:#3447d4 ;
 }
-.wexam-container .box .bx-library{
+.wexam-container .box-wxam .bx-library{
     color:#3447d4 ;
 }
-.wexam-container .box .bxs-pencil{
+.wexam-container .box-wxam .bxs-pencil{
     color:#3447d4 ;
 }
-.wexam-container .box h2{
+.wexam-container .box-wxam h2{
     font-size: 20px;
     font-weight: 500;
     margin: 1.4rem 0 0.5rem;
 }
-.wexam-container .box .bx:hover, .wexam-container .bx .bxs-book-reader{
+.wexam-container .box-wxam .bx:hover, .wexam-container .bx .bxs-book-reader{
 background: var(--gradient);
 color: #fff;
 }
-.tombol{
+.tombol-wxam{
     padding: 20px;
 }
 .animasi{
     transition: all 0.1s;
     -webkit-transition: all 0.1s;
 }
-.button-aktif{
+.button-aktif-wxam{
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 15px;
     color : rgb(63, 46, 46);
     text-decoration: none;
 }
-.button-aktif:active{
+.button-aktif-wxam:active{
     transform: translate(50px,50px);
     -webkit-transform: translate(0px,5px);
     background-color:coral;
 }  
-.hijau{
+.hijau-wxam{
     font-family: Poppins, sans-serif;
     background-color:#FFEA79 ;
     opacity: 80%;
@@ -86,17 +86,17 @@ html{
     scroll-behavior: smooth;
 }
 @media (max-width: 768px){
-    .judul-wex{
+    .judul-wexam{
         text-align: center;
         justify-content: center;
     }
     .wexam-container {
         flex-direction: column;
     }
-    .box{
+    .box-wxam{
         flex-direction: column;
     }
-    .tombol{
+    .tombol-wxam{
         justify-content: center;
     }
 }
