--- a/src/css/style-wfresh.css
+++ b/src/css/style-wfresh.css
@@ -1,44 +1,36 @@
 body {
-  background: -webkit-radial-gradient(center, #c2c5e0, #b5b5d3);
   font-family: "Quicksand", sans-serif;
 }
-#header {
-  background: -webkit-radial-gradient(right, #848bd1, #967bd6);
+#header-wfresh {
+  background-color: #2b2252;
   height: 50px;
   color: white;
   text-align: center;
   padding-top: 10px;
   font-size: 25px;
-  border-radius: 10px;
 }
-
-#semua {
-  justify-content: space-around;
-}
-#kiri {
+#kiri-wfresh {
   float: left;
   width: 49%;
   text-align: center;
 }
 
-#kanan {
+#kanan-wfresh {
   float: right;
-
-  width: 51%;
   text-align: center;
+  display: flex;
+  justify-content: right;
 }
 
-h2 {
-  width: 60%;
+.h2-kiri-wfresh {
   text-align: center;
 }
-
-#video {
+#video-wfresh {
   width: 100%;
   text-align: center;
 }
 
-#all-col {
+#all-col-wfresh {
   padding: 15px;
   border: 3px solid #0c375f;
   margin: 20px;
@@ -47,7 +39,7 @@ h2 {
   border-radius: 15px;
 }
 
-#all2-col {
+#all2-col-wfresh {
   padding: 15px;
   padding-left: 0px;
   border: 1px solid #0c375f;
@@ -56,12 +48,13 @@ h2 {
   border-radius: 15px;
   align-items: center;
 }
-
-h3 {
+.h3-wfresh {
   text-align: center;
 }
-
-.hari {
+.hari-wfresh{
+  text-align: center;
+}
+.hari-wfresh {
   text-align: center;
   background-color: rgb(96, 135, 194);
   width: 500px;
@@ -70,7 +63,7 @@ h3 {
   font-size: 30px;
 }
 
-.card {
+.card-wfresh {
   width: 200px;
   height: 200px;
   background-color: rgb(77, 118, 165);
@@ -79,12 +72,12 @@ h3 {
   padding: 5px;
   display: flex;
 }
-.nya {
+.nya-wfresh {
   text-align: center;
   padding: 50px;
   height: 200px;
 }
-.semuaaa {
+.semuaaa-wfresh {
   width: 100%;
   height: 150px;
   display: flex;
@@ -92,26 +85,26 @@ h3 {
   justify-content: space-around;
 }
 
-.card img {
+.card-wfresh img {
   width: 200px;
   height: 200px;
   border-radius: 24px;
 }
 
-.card p {
+.card-wfresh p {
   text-align: center;
   padding: 20px;
   width: 100%;
   padding: 10px;
 }
 
-h1 {
+.h1-wfresh-webinar {
   text-align: center;
   background-color: #0c375f;
   color: beige;
 }
 
-#col {
+#col-wfresh {
   margin-top: 4%;
   flex-basis: 31%;
   background: rgb(97, 96, 155);
@@ -127,13 +120,13 @@ h1 {
   float: left;
 }
 
-audio {
+.audio-wfresh {
   float: left;
   padding: 30px;
   color: #967bd6;
 }
 
-video {
+.video-wfresh1 {
   width: 90%;
   align-content: center;
   text-align: center;
