--- a/src/css/style-wsat.css
+++ b/src/css/style-wsat.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-family: "Quicksand", sans-serif;
 }
-.container {
+.container-wsat {
   width: 100%;
   height: 695px;
   overflow: hidden;
@@ -11,56 +11,59 @@
   flex-wrap: wrap;
   position: relative;
 }
-nav {
+.nav-wsat {
   width: 100%;
   position: absolute;
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding: 30px 5% 0;
+  padding: 0px 0% 0;
   z-index: 100;
 }
-nav img {
+.nav-wsat img {
   width: 170px;
+  padding-left: 4rem;
+  padding-top: 2rem;
 }
-nav ul {
+.nav-wsat .ul-wsat {
   flex: 1;
   text-align: right;
-  margin-right: 150px;
+  padding-right: 13%;
   float: right;
 }
-nav ul li {
+.nav-wsat .ul-wsat li {
   display: inline-block;
   margin: 0 50px;
 }
-nav ul li a {
+.nav-wsat .ul-wsat li a {
   text-decoration: none;
   color: #000;
 }
-.left-col {
+.left-col-wsat {
   flex-basis: 50%;
   padding: 10% 0% 0;
   background-color: #383e66;
 }
-.left-col h1 {
+.left-col-wsat h1 {
   text-align: center;
   font-size: 20px;
   padding: 19px;
   padding-bottom: 20px;
   color: white;
 }
-.right-col {
+.right-col-wsat {
   flex-basis: 40%;
   padding: 10% 5%;
   background: white;
   opacity: 70%;
   position: relative;
 }
-.right-col h1 {
+.right-col-wsat h1 {
   font-size: 20px;
   text-align: center;
   color: rgb(18, 18, 85);
 }
-.back-video img {
+.back-video-wsat img {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -68,13 +71,15 @@ nav ul li a {
   height: 500px;
   z-index: -100;
 }
-.left-container {
+.left-container-wsat {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.left-container .box {
+.left-container-wsat .box-wsat {
   text-align: center;
   padding: 30px;
   flex-basis: 70%;
@@ -86,10 +91,10 @@ nav ul li a {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.19);
 }
 
-.left-container .box:hover {
+.left-container-wsat .box-wsat:hover {
   transform: scale(1.2);
 }
-.box img {
+.box-wsat img {
   padding: 10px;
   margin: 5px;
   height: 50%;
@@ -105,11 +110,13 @@ nav ul li a {
   height: 50px;
   border-radius: 20px;
   border: solid white;
-  float: right;
 }
 #wsatt a {
   color: white;
 }
 #wsatt:hover {
   background-color: rgb(181, 170, 255);
+}
+.button-wsat{
+  padding-right: 5rem;
 }
