Fixing header layout margin top

--- a/src/css/style-materi-detail.css
+++ b/src/css/style-materi-detail.css
@@ -46,6 +46,7 @@
   background: #6084bb;
 }
 .sidebar-materi {
+  margin-top: 70px !important;
   background: #1d3a67;
   margin-top: 70px;
   padding-top: 30px;
